# ChainDrift

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  chaindrift.service  chaindrift.service.watchdog  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-chainai-rl.txt  requirements-chainai.txt  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
build_helpers/: binance_update_lev_tiers.py  chaindrift_client_version_align.py  extract_config_json_schema.py  publish_docker_arm64.sh  publish_docker_multi.sh  schema.json
chaindrift/: __init__.py  __main__.py  chaindriftbot.py  constants.py  exceptions.py  main.py  misc.py  wallets.py  worker.py
chaindrift_client/: __init__.py  ft_rest_client.py
chaindrift_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
config_examples/: config_binance.example.json  config_chainai.example.json  config_full.example.json  config_kraken.example.json
docker/: Dockerfile.armhf  Dockerfile.chainai  Dockerfile.chainai_rl  Dockerfile.custom  Dockerfile.develop  Dockerfile.jupyter  Dockerfile.plot
docs/: advanced-backtesting.md  advanced-hyperopt.md  advanced-orderflow.md  advanced-setup.md  backtesting.md  bot-basics.md  bot-usage.md  chain-ui.md  chainai-configuration.md  chainai-developers.md  chainai-feature-engineering.md  chainai-parameter-table.md  chainai-reinforcement-learning.md  chainai-running.md  chainai.md  configuration.md  data-analysis.md  data-download.md  edge.md  (+27 more)
(+384 files in other folders)
